--- a/SGP_Project/styles.css
+++ b/SGP_Project/styles.css
@@ -121,7 +121,7 @@ nav ul li a {
 }
 .search-section {
     padding: 40px 20px;
-    background-color: #f0f0f0;
+    background-color:whitesmoke;
     text-align: center;
 }
 
@@ -158,6 +158,7 @@ nav ul li a {
 .search-results {
     padding: 40px 20px;
     text-align: center;
+    background-color:whitesmoke;
 }
 
 .result-list {
@@ -167,7 +168,7 @@ nav ul li a {
 }
 
 .result-item {
-    background-color: white;
+    background-color:antiquewhite;
     border: 1px solid #ccc;
     padding: 20px;
     width: 60%;
@@ -417,7 +418,7 @@ nav ul li a {
 
 /* Login Page */
 .login-section {
-    padding: 40px 20px;
+    padding: 55px 20px;
     max-width: 400px;
     margin: 0 auto;
     background-color: #fff;
@@ -614,3 +615,4 @@ footer a {
 .social-media a {
     margin: 0 10px;
 }
+
